--- a/enterprice/search/templates/search.html
+++ b/enterprice/search/templates/search.html
@@ -50,7 +50,7 @@
                 {% endif %}
 
 
-            <a href="{% url 'login' %}">Выйти</a>
+            <a href="{% url 'login' %}">Войти</a>
         </div>
     </header>
     <div class="container_left_center">
