--- a/enterprice/search/templates/main.html
+++ b/enterprice/search/templates/main.html
@@ -10,7 +10,7 @@
 
 <header class="header">
     <div class="header_logo">
-        <a href="{% url 'main' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
+        <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
     </div>
 </header>
 <div class="main_wrapper">
