--- a/enterprice/search/templates/registration.html
+++ b/enterprice/search/templates/registration.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="{% static 'css/registration.css' %}">
-    <title>Form</title>
+    <title>Вход</title>
 </head>
 <body>
 <div class="wrapper">
