--- a/enterprice/search/static/css/search_style.css
+++ b/enterprice/search/static/css/search_style.css
@@ -91,8 +91,14 @@
     overflow: auto;
     border-left: 2px solid black;
     border-top: 2px solid black;
+}
+
+.table_div th {
+    position: sticky;
+    top: 0;
 
 }
+
 
 .container_left_center {
     display: flex;
@@ -119,7 +125,7 @@
     margin-bottom: 15px;
     font-size: 20px;
     list-style: none;
-    text-align:left;
+    text-align: left;
 }
 
 .left_colum ul a:hover {
@@ -178,10 +184,7 @@ th:first-child, td:first-child {
 }
 
 
-th:last-child {
-    border-top-right-radius: 10px;
-    border-right: none;
-}
+
 
 td {
     padding: 10px 20px;
