--- a/enterprice/search/templates/details.html
+++ b/enterprice/search/templates/details.html
@@ -11,7 +11,7 @@
 </head>
 <header class="header">
     <div class="header_logo">
-        <a href="{% url 'main' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
+        <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
     </div>
 </header>
 <body>
