--- a/enterprice/search/static/css/inventory_detail_style.css
+++ b/enterprice/search/static/css/inventory_detail_style.css
@@ -1,5 +1,6 @@
 header {
-    background-image: url("../img/heder_back.jpg");
+    background-image: url("../img/back_detail.jpg");
+    background-size: cover;
     width: 100%;
     height: 150px;
     display: flex;
@@ -57,7 +58,7 @@ input {
 
     font-weight: bold;
     padding: 5px;
-    background: #6287a1;
+    background: #6fc253;
     border: 1px solid #dddddd;
 }
 
@@ -88,3 +89,16 @@ input {
 .title_table{
     width: 50%;
 }
+
+.red {
+    background-color: red;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.green {
+    background-color: green;
+}
+
