--- a/enterprice/search/static/css/inventory_style.css
+++ b/enterprice/search/static/css/inventory_style.css
@@ -1,5 +1,6 @@
 header {
     background-image: url("../img/heder_back.jpg");
+    background-size: cover;
     width: 100%;
     height: 150px;
     display: flex;
@@ -33,7 +34,7 @@ header {
     width: 400px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    box-shadow:10px 10px 10px 2px rgba(34, 60, 80, 0.2);
+    box-shadow: 10px 10px 10px 2px rgba(34, 60, 80, 0.2);
 
 
 }
@@ -45,7 +46,7 @@ header {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     text-align: center;
-    box-shadow:10px 10px 10px 2px rgba(34, 60, 80, 0.2);
+    box-shadow: 10px 10px 10px 2px rgba(34, 60, 80, 0.2);
 
 
 }
@@ -64,7 +65,7 @@ header {
 
 }
 
-.header_user_account img{
+.header_user_account img {
     height: 70px;
     width: 70px;
     border-radius: 100%;
@@ -72,11 +73,12 @@ header {
     margin-top: 10px;
 }
 
-.header_user_account a{
+.header_user_account a {
     text-decoration: none;
 
 }
-.header_user_account p{
+
+.header_user_account p {
 
     font-size: 20px;
 }
@@ -131,6 +133,6 @@ header {
     text-decoration: underline
 }
 
-.title_table{
+.title_table {
     width: 40%;
 }
