--- a/enterprice/search/templates/inventory_detail.html
+++ b/enterprice/search/templates/inventory_detail.html
@@ -14,7 +14,7 @@
             <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
         </div>
         <div>
-{#            <p>Остаток на сегодня {{ sum_remains_now }} {{ product.base_unit }}</p>
+          <p>Остаток на сегодня {{ sum_remains_now }} {{ product.base_unit }}</p>
             <h2>{{ product.title }} </h2>
             <hr>
             <h2>{{ product.article }} </h2>
