--- a/enterprice/search/templates/inventory.html
+++ b/enterprice/search/templates/inventory.html
@@ -14,7 +14,7 @@
             <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
         </div>
         <div>Инвентаризация. <br>
-            Остаток  ТМЦ от 03.10.23
+            Остаток ТМЦ от 03.10.23
         </div>
         <div class="header_find_container">
 
@@ -51,7 +51,6 @@
     </header>
 
 
-
     <div class="table">
         <table class="table_inv">
             <tr>
@@ -59,8 +58,6 @@
                 <th>Наименование</th>
                 <th>Базовая единица</th>
                 <th>Количество</th>
-                <th>Коментарий</th>
-                <th>Адрес</th>
                 <th>Статус</th>
             </tr>
             {% for i in inventory %}
@@ -69,9 +66,9 @@
                     <td class="title_table">{{ i.title }}</td>
                     <td>{{ i.base_unit }}</td>
                     <td>{{ i.total_quantity }}</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{ i.status }} </td>
+
+
                 </tr>
             {% endfor %}
         </table>
