--- a/enterprice/search/templates/inventory_detail.html
+++ b/enterprice/search/templates/inventory_detail.html
@@ -14,7 +14,7 @@
             <a href="{% url 'find' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
         </div>
         <div>
-          <p>Остаток на сегодня {{ sum_remains_now }} {{ product.base_unit }}</p>
+            <p>Остаток на сегодня {{ sum_remains_now }} {{ product.base_unit }}</p>
             <h2>{{ product.title }} </h2>
             <hr>
             <h2>{{ product.article }} </h2>
@@ -34,11 +34,12 @@
             <a href="{% url 'inventory' %}"><h2> Продолжить поиск ➡️</h2></a>
         </div>
         <h2>Статус >>> </h2>
+
         <div class="{% if remains_sum > 0 %}blue
         {% elif remains_sum == 0 %}green
         {% else %}red
         {% endif %}">
-            <h2>{% if remains_sum > 0 %} В ожидании
+            <h2>{% if remains_sum > 0 %} В работе
             {% elif remains_sum == 0 %} Позиция сошлась
             {% else %} Излишки
             {% endif %}
@@ -47,43 +48,47 @@
     </header>
 
 
+    <div class="form_set_quantity">
+        <lable>Введите подсчитанное количество.</lable>
+        <form action="" method="POST">
+            {% csrf_token %}
+            <input type="text" placeholder="количество найдено" name="quantity_set" required="required">
+            <input type="text" placeholder="адрес" name="address">
+            <input type="text" placeholder="Коментарий" name="comment">
+            <button class="find_button">отправить</button>
+        </form>
+    </div>
 
 
-<div class="form_set_quantity">
-    <lable>Введите подсчитанное количество.</lable>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <input type="text" placeholder="количество найдено" name="quantity_set">
-        <button class="find_button">отправить</button>
-    </form>
-</div>
-
-
-<div class="table">
-    <table class="table_inv">
-        <tr>
-            <th>Пользователь</th>
-            <th>Артикул</th>
-            <th>Наименование</th>
-            <th>Единица</th>
-            <th>Найдено</th>
-            <th>Дата время</th>
-            <th>Редактировать</th>
-        </tr>
-        {% for d in user_set_invent %}
-
+    <div class="table">
+        <table class="table_inv">
             <tr>
-                <td>{{ d.user }}</td>
-                <td>{{ d.product.article }}</td>
-                <td>{{ d.product.title }}</td>
-                <td>{{ d.product.base_unit }}</td>
-                <td>{{ d.quantity_ord }}</td>
-                <td>{{ d.created_at }}</td>
-                <td><a href="{% url 'delete' d.id %}">Удалить</a></td>
+                <th>Пользователь</th>
+                <th>Артикул</th>
+                <th>Наименование</th>
+                <th>Единица</th>
+                <th>Найдено</th>
+                <th>Дата время</th>
+                <th>Адрес</th>
+                <th>Коментарий</th>
+                <th>Редактировать</th>
             </tr>
-        {% endfor %}
-    </table>
-</div>
+            {% for d in user_set_invent %}
+
+                <tr>
+                    <td>{{ d.user }}</td>
+                    <td>{{ d.product.article }}</td>
+                    <td>{{ d.product.title }}</td>
+                    <td>{{ d.product.base_unit }}</td>
+                    <td>{{ d.quantity_ord }}</td>
+                    <td>{{ d.created_at }}</td>
+                    <td>{{ d.address }}</td>
+                    <td>{{ d.comment }}</td>
+                    <td><a href="{% url 'delete' d.id %}">Удалить</a></td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 </div>
 
 
