--- a/enterprice/search/templates/inventory.html
+++ b/enterprice/search/templates/inventory.html
@@ -66,7 +66,7 @@
                     <td class="title_table">{{ i.title }}</td>
                     <td>{{ i.base_unit }}</td>
                     <td>{{ i.total_quantity }}</td>
-                    <td>{{ i.status }} </td>
+                    <td>{% if i.status %}{{ i.status }}{% else %}{% endif %}
 
 
                 </tr>
